# int-ball2_platform_works

./: README.md
platform/: README.md
platform/audio_common/: README.md
platform/audio_common/audio_capture/: CMakeLists.txt  package.xml
platform/audio_common/audio_capture/launch/: bringup.launch
platform/audio_common/audio_capture/src/: audio_capture.cpp
platform/audio_common/audio_common/: package.xml
platform/gscam/: CMakeLists.txt  README.md  package.xml
platform/gscam/include/gscam/: gscam.h
platform/gscam/launch/: bringup_all.launch  bringup_left.launch  bringup_main.launch  bringup_right.launch
platform/gscam/src/: gscam.cpp  gscam_node.cpp  gscam_nodelet.cpp
platform/guidance_control/ctl_only/: package.xml
platform/guidance_control/ctl_only/include/ctl/: ctl_body.h
platform/guidance_control/fsm/: package.xml
platform/guidance_control/fsm/src/: fsm.cpp
platform/guidance_control/fsm/test/: test_eigen_quaternion.cpp
platform/guidance_control/guidance_control_common/: package.xml
platform/platform_manager/: package.xml
platform/platform_manager/launch/: bringup.launch
platform/platform_manager/scripts/: platform_manager.py
platform/platform_monitor/: package.xml
platform_docker/: README.md
platform_docker/template/: Dockerfile  cmd.sh
platform_scripts/: README.md  setup.sh
platform_scripts/management/: launch_platform_flight_software.sh
platform_scripts/minimal_telemetry_publisher/: minimal_telemetry_publisher.py
platform_scripts/systemd/: platform_flight_software.service
